--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lyuehh/quill-image-resize-module.git"
+    "url": "git+https://github.com/Ace217/quill-image-resize-module.gits"
   },
   "keywords": [
     "quill",
